<resources>
    <string name="app_name">KeepSafe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_aty_home">AtyHome</string>
    <string name="title_activity_aty_setting">AtySetting</string>
    <string name="SETTING">设置中心</string>
    <string name="SETTING_AUTO">自动更新设置</string>
    <string name="SETTING_AUTO_ON">自动更新已经打开</string>
    <string name="SETTING_AUTO_OFF">自动更新已经关闭</string>
    <string name="DOWNLOAD_STATUS">下载进度</string>
    <string name="VERSION">版本号:</string>
    <string name="KEEP_SAFE">安全卫士</string>
    <string name="title_activity_aty_safe">AtySafe</string>
    <string name="SET_PASSWORD">密码设置</string>
    <string name="INPUT_PASSWORD">请输入密码</string>
    <string name="CONFIRM_INPUT_PASSWORD">请确认输入的密码</string>
    <string name="CONFIRM">确定</string>
    <string name="CANCEL">取消</string>
    <string name="PROTECT_FROM_THEFT">手机防盗</string>
    <string name="title_activity_aty_setup1">AtySetup1</string>
    <string name="WELCOME_PROTECT_THEFT">欢迎使用手机防盗</string>
    <string name="PROTECT_THEFT_1">您的手机防盗卫士:</string>
    <string name="PROTECT_THEFT_2">SIM卡变更报警</string>
    <string name="PROTECT_THEFT_3">GPS追踪</string>
    <string name="PROTECT_THEFT_4">远程销毁数据</string>
    <string name="PROTECT_THEFT_5">远程锁屏</string>
    <string name="NEXT">下一步</string>
    <string name="Previous">上一步</string>
    <string name="title_activity_aty_setup2">AtySetup2</string>
    <string name="title_activity_aty_setup3">AtySetup3</string>
    <string name="title_activity_aty_setup4">AtySetup4</string>
    <string name="title_activity_aty_contact">AtyContact</string>
    <string name="title_activity_aty_atools">AtyAtools</string>
    <string name="title_activity_aty_address">AtyAddress</string>
    <string name="title_activity_aty_gps_test">AtyGpsTest</string>
    <string name="title_activity_aty_lock_screen">AtyLockScreen</string>
    <string name="title_activity_aty_draw_address">AtyDrawAddress</string>
    <string name="title_activity_aty_rocket_bg">AtyRocketBg</string>
    <string name="title_activity_aty_call_safe">AtyCallSafe</string>
    <string name="title_activity_aty_app_manager">AtyAppManager</string>
    <string name="title_activity_aty_input_phone_num">AtyInputPhoneNum</string>
    <string name="title_activity_aty_task_manager">AtyTaskManager</string>
    <string name="title_activity_aty_task_manager_setting">AtyTaskManagerSetting</string>
    <string name="title_activity_aty_anti_virusa">AtyAntiVirusa</string>
</resources>
