<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="gan.keepsafe.atys.AtySetup1">

    <TextView
        style="@style/TitleStyle"
        android:text="@string/WELCOME_PROTECT_THEFT" />

    <TextView
        style="@style/ContentTitle"
        android:text="@string/PROTECT_THEFT_1" />

    <TextView
        style="@style/ContentTitle"
        android:drawableLeft="@android:drawable/star_big_on"
        android:drawableStart="@android:drawable/star_big_on"
        android:text="@string/PROTECT_THEFT_2" />

    <TextView
        style="@style/ContentTitle"
        android:drawableLeft="@android:drawable/star_big_on"
        android:drawableStart="@android:drawable/star_big_on"
        android:text="@string/PROTECT_THEFT_3" />

    <TextView
        style="@style/ContentTitle"
        android:drawableLeft="@android:drawable/star_big_on"
        android:drawableStart="@android:drawable/star_big_on"
        android:text="@string/PROTECT_THEFT_4" />

    <TextView
        style="@style/ContentTitle"
        android:drawableLeft="@android:drawable/star_big_on"
        android:drawableStart="@android:drawable/star_big_on"
        android:text="@string/PROTECT_THEFT_5" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_online" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_invisible" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/setup1" />

        <Button
            android:onClick="NextClick"
            style="@style/NextButton" />
    </RelativeLayout>


</LinearLayout>
